[FIX] Make overlay scrollbar work for scrollable tables

--- a/BaCa2/assets/scss/_table.scss
+++ b/BaCa2/assets/scss/_table.scss
@@ -66,6 +66,14 @@
         }
     }
 
+    .dataTables_scrollBody {
+        th.sorting, th.sorting_asc, th.sorting_desc {
+            &:after, &:before {
+                display: none;
+            }
+        }
+    }
+
     .resize-handle {
         cursor: pointer;
     }
